# naphash

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  adapt_weights.ipynb  async_dct_loader.py  build.ipynb  calc_for_dict.ipynb  cifar10_baseline.ipynb  cifar10_reduced.ipynb  cifar10_redundancy.ipynb  cifar10_trainer.py  create_training_paths.ipynb  fastai_metrics.py  matplot_helper.py  naphash.cpp  naphash.hpp  napnorm.hpp  pybind11_example.cpp  pynaphash.cpp  setup.py  speed_test.py
experiments/: Dockerfile  adapt_weights.ipynb  calc_for_dict.ipynb  cifar10_baseline.ipynb  cifar10_reduced.ipynb  cifar10_trainer.py  create_training_paths.ipynb  fastai_metrics.py
include/: naphash.hpp  napnorm.hpp
src/: naphash.cpp  naphash.hpp  naphash_cpp.cpp  naphash_py.cpp  napnorm.hpp
tests/: dll_test.py  hash_test.py  norm_test.py  version_test.py
